basic structure and scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-
-build/
-*.log
-*.swp
-.DS_Store
+﻿/build/
+/out/
+/dist/
+/*.log
+# CMake
+CMakeFiles/
+/CMakeCache.txt
+cmake-build-*/
+# Node (if web assets later)
+/node_modules/
