--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,2 @@
-# Umicom Studio IDE — Meson build (Part 19)
-project('umicom-studio-ide', 'c', version: '0.19.0', default_options: ['c_std=c17'])
-
-gtkdep = dependency('gtk4', required: true)
-jsondep = dependency('json-glib-1.0', required: true)
-glibdep = dependency('glib-2.0', required: true)
-gio     = dependency('gio-2.0', required: true)
-
+project('umicom-studio','c', default_options:['c_std=c17'])
 subdir('src')
