--- a/templates/web/react-vite-ts/package.json
+++ b/templates/web/react-vite-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name":"umicom-react-vite-ts",
+  "name":"umicom-templates/web/templates/web/react-vite-ts",
   "private":true,
   "version":"0.1.0",
   "type":"module",
