--- a/templates/web/svelte-vite/package.json
+++ b/templates/web/svelte-vite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "umicom-svelte-vite",
+  "name": "umicom-templates/web/svelte-vite",
   "private": true,
   "version": "0.0.1",
   "type": "module",
