--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,55 +1,79 @@
-cmake_minimum_required(VERSION 3.22)
-project(umicom-studio LANGUAGES C VERSION 0.1.0)
-set(CMAKE_C_STANDARD 17)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+# ---------------------------------------------------------------------------
+# Umicom Studio IDE
+# File: CMakeLists.txt
+# PURPOSE: Top-level CMake configuration
+# Created by: Umicom Foundation | Author: Sammy Hegab | Date: 2025-10-01 | MIT
+# ---------------------------------------------------------------------------
+cmake_minimum_required(VERSION 3.20)
+project(ustudio C)
 
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
+
+# Prefer Ninja if the generator wasn't chosen
+if(NOT CMAKE_GENERATOR)
+  set(CMAKE_GENERATOR "Ninja" CACHE STRING "" FORCE)
+endif()
+
+# Dependencies via pkg-config
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(GTK4 REQUIRED IMPORTED_TARGET gtk4)
-pkg_check_modules(GLIB REQUIRED IMPORTED_TARGET glib-2.0)
-pkg_check_modules(JSONGLIB REQUIRED IMPORTED_TARGET json-glib-1.0)
-pkg_check_modules(CURL REQUIRED IMPORTED_TARGET libcurl)
+pkg_check_modules(GTK REQUIRED gtk4)
+pkg_check_modules(GLIB REQUIRED glib-2.0)
+pkg_check_modules(JSON REQUIRED json-glib-1.0)
+pkg_check_modules(CURL REQUIRED libcurl)
 
-file(GLOB_RECURSE SRC_CORE   CONFIGURE_DEPENDS src/core/*.c)
-file(GLOB_RECURSE SRC_GUI    CONFIGURE_DEPENDS src/gui/*.c)
-file(GLOB_RECURSE SRC_EDITOR CONFIGURE_DEPENDS src/editor/*.c)
-file(GLOB_RECURSE SRC_BUILD  CONFIGURE_DEPENDS src/build/*.c)
-file(GLOB_RECURSE SRC_SEARCH CONFIGURE_DEPENDS src/search/*.c)
-file(GLOB_RECURSE SRC_LLM    CONFIGURE_DEPENDS src/llm/*.c)
-
-add_executable(ustudio
-  ${SRC_CORE} ${SRC_GUI} ${SRC_EDITOR} ${SRC_BUILD} ${SRC_SEARCH} ${SRC_LLM}
-  src/main.c
-)
-target_include_directories(ustudio PRIVATE include src)
-target_link_libraries(ustudio
-  PkgConfig::GTK4 PkgConfig::GLIB PkgConfig::JSONGLIB PkgConfig::CURL
+# Include dirs
+include_directories(
+  ${GTK_INCLUDE_DIRS}
+  ${GLIB_INCLUDE_DIRS}
+  ${JSON_INCLUDE_DIRS}
+  ${CURL_INCLUDE_DIRS}
+  ${CMAKE_SOURCE_DIR}/include
+  ${CMAKE_SOURCE_DIR}/src
 )
 
-enable_testing()
-add_executable(test_llm_body tests/test_llm_body.c)
-target_include_directories(test_llm_body PRIVATE include)
-add_test(NAME test_llm_body COMMAND test_llm_body)
+add_definitions(${GTK_CFLAGS_OTHER} ${GLIB_CFLAGS_OTHER} ${JSON_CFLAGS_OTHER})
 
-add_executable(test_llm_json tests/test_llm_json.c)
-target_link_libraries(test_llm_json PkgConfig::JSONGLIB)
-add_test(NAME test_llm_json COMMAND test_llm_json)
+# Sources: grab everything in src/ (subdirs) and the llm providers
+file(GLOB_RECURSE SRC_ALL CONFIGURE_DEPENDS
+  ${CMAKE_SOURCE_DIR}/src/*.c
+  ${CMAKE_SOURCE_DIR}/src/*/*.c
+  ${CMAKE_SOURCE_DIR}/src/llm/providers/*.c
+)
 
-install(TARGETS ustudio RUNTIME DESTINATION bin)
-install(DIRECTORY include/ DESTINATION include)
+add_executable(ustudio ${SRC_ALL})
 
-# ---- Begin auto-added by scripts/apply-umicom-fixes.ps1 ----
-include(FindPkgConfig)
-if (PKG_CONFIG_FOUND)
-  pkg_check_modules(GLIB REQUIRED glib-2.0)
-  if (TARGET test_llm_body)
-    target_include_directories(test_llm_body PRIVATE ${GLIB_INCLUDE_DIRS})
-    target_link_libraries(test_llm_body PRIVATE ${GLIB_LIBRARIES})
+# Compile flags
+if(MSVC)
+  # (none)
+else()
+  target_compile_definitions(ustudio PRIVATE __USE_MINGW_ANSI_STDIO=1)
+  if(MINGW)
+    # Ensure console subsystem so main() links, and LLD works well
+    target_link_options(ustudio PRIVATE -Wl,--subsystem,console)
   endif()
 endif()
 
-if (TARGET ustudio)
-  target_include_directories(ustudio PRIVATE ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src)
+# Link libraries
+target_link_libraries(ustudio PRIVATE
+  ${GTK_LIBRARIES}
+  ${GLIB_LIBRARIES}
+  ${JSON_LIBRARIES}
+  ${CURL_LIBRARIES}
+)
+
+if(MINGW)
+  target_link_libraries(ustudio PRIVATE
+    mingw32
+    user32 gdi32 winspool shell32 ole32 oleaut32 uuid comdlg32 advapi32
+  )
 endif()
-# ---- End auto-added by scripts/apply-umicom-fixes.ps1 ----
 
+# Group sources for IDEs
+source_group(TREE ${CMAKE_SOURCE_DIR}/src FILES ${SRC_ALL})
 
+# Optional tests
+if(EXISTS "${CMAKE_SOURCE_DIR}/tests/CMakeLists.txt")
+  add_subdirectory(tests)
+endif()
+# ---------------------------------------------------------------------------
