--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,7 @@
 # ---------------------------------------------------------------------------
 cmake_minimum_required(VERSION 3.22)
 project(umicom-studio LANGUAGES C VERSION 0.1.0)
-
 set(CMAKE_C_STANDARD 17)
-set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(PkgConfig REQUIRED)
@@ -23,11 +21,9 @@ file(GLOB_RECURSE SRC_EDITOR CONFIGURE_DEPENDS src/editor/*.c)
 file(GLOB_RECURSE SRC_BUILD  CONFIGURE_DEPENDS src/build/*.c)
 file(GLOB_RECURSE SRC_SEARCH CONFIGURE_DEPENDS src/search/*.c)
 file(GLOB_RECURSE SRC_LLM    CONFIGURE_DEPENDS src/llm/*.c)
-file(GLOB SRC_TOP CONFIGURE_DEPENDS src/*.c)
 
 add_executable(ustudio
   ${SRC_CORE} ${SRC_GUI} ${SRC_EDITOR} ${SRC_BUILD} ${SRC_SEARCH} ${SRC_LLM}
-  ${SRC_TOP}
   src/main.c
 )
 target_include_directories(ustudio PRIVATE include src)
@@ -36,20 +32,46 @@ target_link_libraries(ustudio
 )
 
 enable_testing()
-if (EXISTS "${CMAKE_SOURCE_DIR}/tests/test_llm_body.c")
-  add_executable(test_llm_body tests/test_llm_body.c)
-  target_include_directories(test_llm_body PRIVATE include)
-  if (TARGET PkgConfig::GLIB)
-    target_link_libraries(test_llm_body PRIVATE PkgConfig::GLIB)
-  endif()
-  add_test(NAME test_llm_body COMMAND test_llm_body)
-endif()
+add_executable(test_llm_body tests/test_llm_body.c)
+target_include_directories(test_llm_body PRIVATE include)
+add_test(NAME test_llm_body COMMAND test_llm_body)
 
-if (EXISTS "${CMAKE_SOURCE_DIR}/tests/test_llm_json.c")
-  add_executable(test_llm_json tests/test_llm_json.c)
-  target_link_libraries(test_llm_json PkgConfig::JSONGLIB)
-  add_test(NAME test_llm_json COMMAND test_llm_json)
-endif()
+add_executable(test_llm_json tests/test_llm_json.c)
+target_link_libraries(test_llm_json PkgConfig::JSONGLIB)
+add_test(NAME test_llm_json COMMAND test_llm_json)
 
 install(TARGETS ustudio RUNTIME DESTINATION bin)
 install(DIRECTORY include/ DESTINATION include)
+
+# ---- Begin auto-added by scripts/apply-umicom-fixes.ps1 ----
+include(FindPkgConfig)
+if (PKG_CONFIG_FOUND)
+  pkg_check_modules(GLIB REQUIRED glib-2.0)
+  if (TARGET test_llm_body)
+    target_include_directories(test_llm_body PRIVATE ${GLIB_INCLUDE_DIRS})
+    target_link_libraries(test_llm_body PRIVATE ${GLIB_LIBRARIES})
+  endif()
+endif()
+
+if (TARGET ustudio)
+  target_include_directories(ustudio PRIVATE ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src)
+endif()
+# ---- End auto-added by scripts/apply-umicom-fixes.ps1 ----
+
+
+
+# ---- BEGIN: Logging shim integration (auto-added) ---------------------------
+# Ensure the compiler sees umi_log.h so macros UMI_LOGI/UMI_LOGD are visible.
+# We limit the forced-include to the CLI source to be conservative.
+if(TARGET ustudio)
+  # Add the new source
+  target_sources(ustudio PRIVATE src/umi_log.c)
+
+  # Make sure public include/ is on the path (usually already is)
+  target_include_directories(ustudio PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+  # Force-include the header for cli_entry.c only, so we don't have to edit the file.
+  set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/src/cli_entry.c
+    PROPERTIES COMPILE_FLAGS "-include ${CMAKE_CURRENT_SOURCE_DIR}/include/umi_log.h")
+endif()
+# ---- END: Logging shim integration -----------------------------------------
